--- a/deep-neural-network-from-scratch.ipynb
+++ b/deep-neural-network-from-scratch.ipynb
@@ -106,22 +106,16 @@
    "outputs": [],
    "source": [
     "def init_params():\n",
-    "    W1 = np.random.randn(10, 784) * np.sqrt(2 / 784)\n",
-    "    B1 = np.zeros((10, 1))\n",
-    "    W2 = np.random.randn(10, 10) * np.sqrt(2 / 10) \n",
-    "    B2 = np.zeros((10, 1))\n",
-    "    W3 = np.random.randn(10, 10) * np.sqrt(2 / 10) \n",
+    "    W1 = np.random.randn(100, 784) * np.sqrt(2 / 784)\n",
+    "    B1 = np.zeros((100, 1))\n",
+    "    W2 = np.random.randn(100, 100) * np.sqrt(2 / 10) \n",
+    "    B2 = np.zeros((100, 1))\n",
+    "    W3 = np.random.randn(10, 100) * np.sqrt(2 / 10) \n",
     "    B3 = np.zeros((10, 1))\n",
     "    return W1, B1, W2, B2, W3, B3\n",
     "\n",
     "def ReLU(Z):\n",
     "    return np.maximum(Z, 0)\n",
-    "\n",
-    "def LeakyReLU(Z, alpha=0.01):\n",
-    "    return np.where(Z > 0, Z, alpha * Z)\n",
-    "\n",
-    "def derivative_of_LeakyReLU(Z, alpha=0.01):\n",
-    "    return np.where(Z > 0, 1, alpha)\n",
     "\n",
     "def softmax(Z):\n",
     "    expZ = np.exp(Z - np.max(Z, axis=0, keepdims=True))\n",
@@ -129,9 +123,9 @@
     "    \n",
     "def forward_propagation(W1, B1, W2, B2, W3, B3, X):\n",
     "    Z1 = W1.dot(X) + B1\n",
-    "    A1 = LeakyReLU(Z1)\n",
+    "    A1 = ReLU(Z1)\n",
     "    Z2 = W2.dot(A1) + B2\n",
-    "    A2 = LeakyReLU(Z2)\n",
+    "    A2 = ReLU(Z2)\n",
     "    Z3 = W3.dot(A2) + B3\n",
     "    A3 = softmax(Z3)\n",
     "    return Z1, A1, Z2, A2, Z3, A3\n",
@@ -144,17 +138,17 @@
     "    one_hot_Y[np.arange(Y.size), Y] = 1\n",
     "    return one_hot_Y.T\n",
     "\n",
-    "def backward_propagation(Z1, A1, Z2, A2, Z3, A3, W1, W2, W3, X, Y, lambda_reg=0.01):\n",
+    "def backward_propagation(Z1, A1, Z2, A2, Z3, A3, W1, W2, W3, X, Y):\n",
     "    dZ3 = A3 - Y\n",
-    "    dW3 = 1 / m * dZ3.dot(A2.T) + (lambda_reg / m) * W3\n",
+    "    dW3 = 1 / m * dZ3.dot(A2.T) + W3\n",
     "    dB3 = 1 / m * np.sum(dZ3)\n",
     "    \n",
-    "    dZ2 = W3.T.dot(dZ3) * derivative_of_LeakyReLU(Z2)\n",
-    "    dW2 = 1 / m * dZ2.dot(A1.T) + (lambda_reg / m) * W2\n",
+    "    dZ2 = W3.T.dot(dZ3) * derivative_of_ReLU(Z2)\n",
+    "    dW2 = 1 / m * dZ2.dot(A1.T) + W2\n",
     "    dB2 = 1 / m * np.sum(dZ2)\n",
     "    \n",
-    "    dZ1 = W2.T.dot(dZ2) * derivative_of_LeakyReLU(Z1)\n",
-    "    dW1 = 1 / m * dZ1.dot(X.T) + (lambda_reg / m) * W1\n",
+    "    dZ1 = W2.T.dot(dZ2) * derivative_of_ReLU(Z1)\n",
+    "    dW1 = 1 / m * dZ1.dot(X.T) + W1\n",
     "    dB1 = 1 / m * np.sum(dZ1)\n",
     "    \n",
     "    return dW1, dB1, dW2, dB2, dW3, dB3\n",
